flex gap style fix

--- a/src/components/TripStyles.css
+++ b/src/components/TripStyles.css
@@ -11,7 +11,7 @@
   margin-top: 3rem;
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 2rem 0;
   justify-content: space-between;
 }
 
